Floating Modal Example

--- a/Youtube Clone/youtube.html
+++ b/Youtube Clone/youtube.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles\header.css">
     <link rel="stylesheet" href="styles\general.css">
     <link rel="stylesheet" href="styles\video.css">
+    <link rel="stylesheet" href="styles\sidebar.css">
    
   </head>
   <body>
@@ -33,6 +34,10 @@
             <img class="profile-image" src="images\my-channel.jpeg">
           </div>
         </div>
+    </div>
+
+    <div class="sidebar">
+      sidebar
     </div>
     
     <div class="video-grid">
