--- a/Youtube Clone/youtube.html
+++ b/Youtube Clone/youtube.html
@@ -30,7 +30,12 @@
           <div class="right-section">
             <img class="logo" src="images\upload.svg" alt="">
             <img class="logo" src="images\youtube-apps.svg">
-            <img class="logo" src="images\notifications.svg">
+            <div class="notifications-icon-container">
+              <img class="logo" id="notifications-logo" src="images\notifications.svg">
+              <div class="notifications-count">
+                3
+              </div>
+            </div>
             <img class="profile-image" src="images\my-channel.jpeg">
           </div>
         </div>
@@ -44,6 +49,7 @@
         <div class="video-preview">
             <div class="thumbnail-row">
               <img class="thumbnail" src="images\thumbnail-1.webp">
+            <div class="video-time">14:20</div>
             </div>
             <div class="video-info-grid">
               <div class="channel-picture">
@@ -66,6 +72,8 @@
           <div class="video-preview">
             <div class="thumbnail-row">
               <img class="thumbnail" src="images\thumbnail-2.webp">
+              <div class="video-time">7:45</div>
+            
             </div>
             <div class="video-info-grid">
               <div class="channel-picture">
@@ -87,6 +95,8 @@
           <div class="video-preview">
             <div class="thumbnail-row">
               <img class="thumbnail" src="images\thumbnail-3.webp">
+              <div class="video-time">21:18</div>
+            
             </div>
             <div class="video-info-grid">
               <div class="channel-picture">
@@ -109,6 +119,7 @@
           <div class="video-preview">
             <div class="thumbnail-row">
               <img class="thumbnail" src="images\thumbnail-4.webp">
+              <div class="video-time">22:10</div>
             </div>
             <div class="video-info-grid">
               <div class="channel-picture">
@@ -130,6 +141,7 @@
           <div class="video-preview">
             <div class="thumbnail-row">
               <img class="thumbnail" src="images\thumbnail-5.webp">
+              <div class="video-time">16:22</div>
             </div>
             <div class="video-info-grid">
               <div class="channel-picture">
@@ -152,6 +164,7 @@
           <div class="video-preview">
             <div class="thumbnail-row">
               <img class="thumbnail" src="images\thumbnail-6.webp">
+              <div class="video-time">8:32</div>
             </div>
             <div class="video-info-grid">
               <div class="channel-picture">
@@ -173,6 +186,7 @@
           <div class="video-preview">
             <div class="thumbnail-row">
               <img class="thumbnail" src="images\thumbnail-7.webp">
+              <div class="video-time">6:41</div>
             </div>
             <div class="video-info-grid">
               <div class="channel-picture">
@@ -195,6 +209,7 @@
           <div class="video-preview">
             <div class="thumbnail-row">
               <img class="thumbnail" src="images\thumbnail-8.webp">
+              <div class="video-time">15:21</div>
             </div>
             <div class="video-info-grid">
               <div class="channel-picture">
@@ -216,6 +231,7 @@
           <div class="video-preview">
             <div class="thumbnail-row">
               <img class="thumbnail" src="images\thumbnail-9.webp">
+              <div class="video-time">17:00</div>
             </div>
             <div class="video-info-grid">
               <div class="channel-picture">
@@ -238,6 +254,7 @@
           <div class="video-preview">
             <div class="thumbnail-row">
               <img class="thumbnail" src="images\thumbnail-10.webp">
+              <div class="video-time">9:20</div>
             </div>
             <div class="video-info-grid">
               <div class="channel-picture">
@@ -259,6 +276,7 @@
           <div class="video-preview">
             <div class="thumbnail-row">
               <img class="thumbnail" src="images\thumbnail-11.webp">
+              <div class="video-time">14:20</div>
             </div>
             <div class="video-info-grid">
               <div class="channel-picture">
@@ -281,6 +299,7 @@
           <div class="video-preview">
             <div class="thumbnail-row">
               <img class="thumbnail" src="images\thumbnail-2.webp">
+              <div class="video-time">12:28</div>
             </div>
             <div class="video-info-grid">
               <div class="channel-picture">
