--- a/Youtube Clone/youtube.html
+++ b/Youtube Clone/youtube.html
@@ -22,13 +22,18 @@
             <input type="text" placeholder="Search" class="search-bar">
             <button class="search-button">
               <img class="search-icon" src="images\search.svg" alt="" >
+              <div class="tooltip">Search</div>
             </button>
             <button class="voice-button">
               <img class="voice-icon" src="images\voice-search-icon.svg" alt="">
+              <div class="tooltip">Search with your voice</div>
             </button>
           </div>
           <div class="right-section">
-            <img class="logo" src="images\upload.svg" alt="">
+            <div class="upload-container">
+              <img class="logo" src="images\upload.svg" alt="">
+              <div class="tooltip">Create</div>
+            </div>
             <img class="logo" src="images\youtube-apps.svg">
             <div class="notifications-icon-container">
               <img class="logo" id="notifications-logo" src="images\notifications.svg">
@@ -42,7 +47,26 @@
     </div>
 
     <div class="sidebar">
-      sidebar
+      <div class="sidebar-link">
+        <img src="images\home.svg" alt="">
+        <div>Home</div>
+      </div>
+      <div class="sidebar-link">
+        <img src="images\explore.svg" alt="">
+        <div>Subscriptions</div>
+      </div>
+      <div class="sidebar-link">
+        <img src="images\originals.svg" alt="">
+        <div>Originals</div>
+      </div>
+      <div class="sidebar-link">
+        <img src="images\youtube-music.svg" alt="">
+        <div>Youtube Music</div>
+      </div>
+      <div class="sidebar-link">
+        <img src="images\library.svg" alt="">
+        <div>Library</div>
+      </div>
     </div>
     
     <div class="video-grid">
